tags/0.2/src/objects/WikiRecentlyViewed__c.object
<CustomObject>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Wiki Recently Viewed</relationshipLabel>
        <relationshipName>WikiRecentlyViewed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WikiPage__c</fullName>
        <label>WikiPage</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipLabel>Wiki Recently Viewed</relationshipLabel>
        <relationshipName>RecentlyViewed</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wiki Recently Viewed</label>
    <nameField>
        <label>Recenty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wiki Recently Viewed</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>